addt t100 & 101 fix 6.css with z-index1

--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -76,3 +76,55 @@ article .information {
 	justify-content: space-evenly;
 	width: 100%;	
 }
+
+div.amenities h2 {
+	font-size: 16px;
+	border-bottom: 1px solid #DDDDDD;
+	text-align: left;
+	margin-top: 40px;
+}
+
+.amenities ul {
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding-left: 0px;
+	margin-bottom: 0px;
+}
+
+.amenities img {
+	height: 20px;
+	padding-right: 10px;
+	margin-bottom: -3px;
+
+}
+
+.amenities li {
+	margin-bottom: 10px;
+}
+
+.reviews {
+	margin-top: 40px;
+}
+
+div.reviews h2 {
+	font-size: 16px;
+	border-bottom: 1px solid #DDDDDD;
+	text-align: left;
+}
+
+.reviews ul {
+	list-style-type: none;
+	padding: 0px;
+}
+
+.reviews h3 {
+	font-size: 14px;
+	margin-bottom: 0px;
+}
+
+.reviews p {
+	font-size: 12px;
+	margin-top: 5px;
+}
